--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8>
+    <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
-      href="https://d396qusza40arc.cloudfront.net/startup%2F code%2Fbootstrap-2.3.2.css">
+      href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
   <style type="text/css">
     body {
       padding-top: 20px;
@@ -20,7 +20,7 @@
       padding: 10px 0px 10px 0px;
     }
     .video, .thermometer, .order, .social {
-      borderr: 1px dotted;
+      border: 1px dotted;
       text-align: center;
     }
     .video {
@@ -50,20 +50,20 @@
         <div class="span4 about">
           About
         </div>
-        <div class="row heading">
-          <div class="span12">
-            <h1>Bitstarter Title</h1>
-          </div>
+      </div>
+      <div class="row heading">
+        <div class="span12">
+          <h1>Bitstarter Title</h1>
         </div>
-        <div class="row subheading">
-          <div class="span12">
-            <p class="lead">This is my first bitstarter project.</p>
-          </div>
+      </div>
+      <div class="row subheading">
+        <div class="span12">
+          <p class="lead">This is my first bitstarter project.</p>
         </div>
-        <div class="row pitch">
-          <div class="span6 video">
-            Video
-          </div>
+      </div>
+      <div class="row pitch">
+        <div class="span6 video">
+          Video
         </div>
         <div class="span6">
           <div class="thermometer">
