--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
             <div class="statistics">
               <div class="span4">
                 <div class="linediv-l">
-                  <h3>1000</h3> <p>backers</p>
+                  <h3>1</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -199,13 +199,22 @@
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
-          <p>a;ljdf aljdflajd </p>
+          <p>
+          Do you eat out often? Do you sit at the restaurant, staring at the menu, trying to remember what you ate 
+          the last time you were there or whether you liked the dish(es) you ate? 
+          </p>
+          <p>
+          ScoreMenu to the rescue! Enter the restaurant name and the dish(es) you ate, and rate them! The next time you're 
+          at the restaurant, you can quickly see what you had on your previous visits. 
+          </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>section 2</p>
+          <p>
+          You can even look at others' ratings of dishes at that particular restaurant.
+          </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="http://placehold.it/480x300">
